--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Copy .env.example to .env
-      run: cp ./env.example ./env
+      run: cp ./.env.example ./env
 
     - name: Run integration script
       run: npm run test:integration
