--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://work_owner:4CWzfBv8mVbY@ep-aged-surf-a57s74di.us-east-2.aws.neon.tech/work?sslmode=require"
+DATABASE_URL="postgresql://postgres:KhanUmarKing$$$1@localhost:5432/postgres?schema=public"
